--- a/src/app/d3js/d3/d3.component.html
+++ b/src/app/d3js/d3/d3.component.html
@@ -1,26 +1,100 @@
 <div class="wraper">
     <div class="list">
         <!-- D3 Fundamentals -->
-        <button class="styled" routerLink="svg-basics">SVG Basics</button>
-        <button class="styled" routerLink="selections-data-binding">Selections & Data Binding</button>
-        <button class="styled" routerLink="scales">Scales (Linear, Ordinal, Time)</button>
-        <button class="styled" routerLink="dom-manipulation">DOM Manipulation</button>
-        <button class="styled" routerLink="data-loading">Data Loading (CSV/JSON)</button>
-        <button class="styled" routerLink="basic-transitions">Basic Transitions</button>
+        <button 
+            class="styled" 
+            [routerLink]="['svg-basics']" 
+            routerLinkActive="active">
+            SVG Basics
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['selections-data-binding']" 
+            routerLinkActive="active">
+            Selections & Data Binding
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['scales']" 
+            routerLinkActive="active">
+            Scales (Linear, Ordinal, Time)
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['dom-manipulation']" 
+            routerLinkActive="active">
+            DOM Manipulation
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['data-loading']" 
+            routerLinkActive="active">
+            Data Loading (CSV/JSON)
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['basic-transitions']" 
+            routerLinkActive="active">
+            Basic Transitions
+        </button>
 
         <!-- Intermediate D3 -->
-        <button class="styled" routerLink="advanced-scales">Advanced Scales</button>
-        <button class="styled" routerLink="axes-legends">Axes & Legends</button>
-        <button class="styled" routerLink="path-generators">Path Generators</button>
-        <button class="styled" routerLink="layouts">Layouts (Stack, Pie, etc.)</button>
-        <button class="styled" routerLink="force-layouts">Force Layouts</button>
-        <button class="styled" routerLink="zoom-pan">Zoom & Pan</button>
-        <button class="styled" routerLink="brush-components">Brush Components</button>
-        <button class="styled" routerLink="event-handling">Event Handling</button>
+        <button 
+            class="styled" 
+            [routerLink]="['advanced-scales']" 
+            routerLinkActive="active">
+            Advanced Scales
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['axes-legends']" 
+            routerLinkActive="active">
+            Axes & Legends
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['path-generators']" 
+            routerLinkActive="active">
+            Path Generators
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['layouts']" 
+            routerLinkActive="active">
+            Layouts (Stack, Pie, etc.)
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['force-layouts']" 
+            routerLinkActive="active">
+            Force Layouts
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['zoom-pan']" 
+            routerLinkActive="active">
+            Zoom & Pan
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['brush-components']" 
+            routerLinkActive="active">
+            Brush Components
+        </button>
+        <button 
+            class="styled" 
+            [routerLink]="['event-handling']" 
+            routerLinkActive="active">
+            Event Handling
+        </button>
         
-  
         <!-- Interview Prep Topics -->
-        <button class="styled" routerLink="real-world-scenarios">Interview-d3</button> 
+        <button 
+            class="styled" 
+            [routerLink]="['real-world-scenarios']" 
+            routerLinkActive="active">
+            Interview-d3
+        </button> 
     </div>
 
     <div class="sub-components-wraper">
