--- a/src/app/aws/deployment/deployment.component.scss
+++ b/src/app/aws/deployment/deployment.component.scss
@@ -44,6 +44,7 @@ p, h1, h2, h3, h4, h5, h6 {
     .examples {
       width: 100%;
       height: auto;
+      padding: 20px;
 
         .header {
             text-align: center;
